# DesignPatternsCpp

./: .gitignore  CMakeLists.txt  DesignPatternsCpp.vcxproj  DesignPatternsCpp.vcxproj.filters  patterns  readme.md
src/: CMakeLists.txt  main.cpp  person.cpp  person.h  strategy.cpp  strategy.hpp
src/abstract_factory/: GoblinEnemy.h  GoblinSpawn.h  KoboldSpawn.h
src/builder/: GameMatch.h  GameMatchDirector.h
src/factory_method/: BaseEnemy.h  EnemySpawn.h  KoboldEnemy.h
src/singleton/: GameImmutableInfo.h  GameInfo.h
src/strategy/: CardStrategy.h  MagicCardStrategy.cpp  MagicCardStrategy.h  TrapCardStrategy.cpp  TrapCardStrategy.h  card.cpp  card.h  magic_card_strategy.cpp  magic_card_strategy.h  trap_card_strategy.cpp  trap_card_strategy.h
test/: AbstractFactoryTest.cpp  BuilderTest.cpp  CMakeLists.txt  FactoryMethodTest.cpp  GameInfoTest.cpp  SingletonTest.cpp  StrategyTest.cpp  strategy_test.cpp
